policy/gatekeeper/test-init-unsigned.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-init-unsigned
  namespace: default
spec:
  containers:
    - name: signed-main
      image: 5936/supply-chain-demo:latest
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
