policy/gatekeeper/test-mixed-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-mixed-containers
  namespace: default
spec:
  containers:
    - name: signed-container
      image: 5936/supply-chain-demo:latest
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
    - name: unsigned-container
      image: 5936/supply-chain-demo:unsigned-test
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
